Moved config file locations into appconfig from models/box.py

--- a/private/appconfig.ini
+++ b/private/appconfig.ini
@@ -17,3 +17,9 @@ login  = username:password
 [forms]
 formstyle = bootstrap3_inline
 separator = 
+
+; BOX configuration
+[box]
+pem_file = private/box_private_key.pem
+app_config = private/679891_r1z60k7r_config.json
+data_root = 13400251912
