Implemented JSON calls and filtering on habitat and time from/to

--- a/private/appconfig.ini
+++ b/private/appconfig.ini
@@ -23,3 +23,4 @@ separator =
 pem_file = private/box_private_key.pem
 app_config = private/679891_r1z60k7r_config.json
 data_root = 53829625773
+; data_roots (live_data = 53829625773)
