Finalised draft of stream api calls

--- a/private/appconfig.ini
+++ b/private/appconfig.ini
@@ -12,7 +12,6 @@ server = smtp.gmail.com:587
 sender = you@gmail.com
 login  = username:password
 
-
 ; form styling
 [forms]
 formstyle = bootstrap3_inline
@@ -24,3 +23,7 @@ pem_file = private/box_private_key.pem
 app_config = private/679891_r1z60k7r_config.json
 data_root = 53829625773
 ; data_roots (live_data = 53829625773)
+
+; audio time window width in seconds
+[audio_window]
+width = 1800
