Added file_size to audio table, populates during box_scan and is used to filter out short files from the API and from stream indexing

--- a/private/appconfig.ini
+++ b/private/appconfig.ini
@@ -24,6 +24,9 @@ app_config = private/679891_r1z60k7r_config.json
 data_root = 53829625773
 ; data_roots (live_data = 53829625773)
 
-; audio time window width in seconds
-[audio_window]
-width = 1800
+; audio parameters
+[audio]
+; time window width in seconds
+window_width = 1800
+; minimum file size to index and stream - roughly 2e7 in full 20 minute files
+min_size = 10000000
