--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@ uploads/
 .Rdata
 .Rapp.history
 
-# Ignore the private files
+# Ignore the private files except the appconfig.json
 private/*.pem
 private/*.json
+private/admin_password.txt
+!private/appconfig.json
