--- a/private/old_appconfig.ini
+++ b/private/old_appconfig.ini
@@ -21,8 +21,8 @@ separator =
 [box]
 pem_file = private/box_private_key.pem
 app_config = private/679891_r1z60k7r_config.json
-data_root = 53829625773
-; data_roots (live_data = 53829625773)
+data_root = 0
+data_folders = (live_data = 53829625773, point_count = 63699013990)
 
 ; audio parameters
 [audio]
