Big pile of API changes, poorly differentiated

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,5 @@ uploads/
 .Rapp.history
 
 # Ignore the private files except the appconfig.json
-private/*.pem
-private/*.json
-private/admin_password.txt
+private/*
 !private/appconfig.json
